--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bpmn-js",
-  "version": "8.5.0",
+  "version": "1",
   "description": "A bpmn 2.0 toolkit and web modeler",
   "main": "index.js",
   "files": [
@@ -97,6 +97,7 @@
     "webpack": "^4.44.2"
   },
   "dependencies": {
+    "bpmn-js": "^8.5.0",
     "bpmn-moddle": "^7.0.5",
     "css.escape": "^1.5.1",
     "diagram-js": "^7.3.0",
